# practice

./: .gitignore  PITCHME.md  README.md  Sample_Markdown.md  casle_of_fire.txt  gomoku_game.c  goto_test.cpp  init_array_test.c  invader_game.c  jyanken_vol2.c  main.c  main.c~  prime_num.cpp
OpenCV2/: README.md
asm/: hello.s
bazel/: WORKSPACE
biotSavart/: BiotSavart.cpp  animation.gp  animation.plt
correct_indent/: correct_indent_vol1.c  correct_indent_vol2.c
cpp_edision/: README.md
design/: singleton.cpp
devotion/: abc010.py  abc014_b.py  abc023_b.py  abc030_b.py  abc032_b.py  abc046_b.py  abc057_c.cpp  abc065_b.py  abc082_b.py  abc084_d.py  abc091_c.py  abc121_b.py  abc122_c.py  abc126_c.py  abc128_b.py  abc130_c.py  abc133_c.py  abc156_c.py  abc163_e.py  abc167_c.py  agc004_a.py  agc009_a.py  agc015_a.py  agc023_a.py  arc017_a.cpp  arc079_a.py  arc081_a.py  arc093_a.py  atc001_a.py  atc002_a.cpp  atc002_a.py  atc002_b.py  code_formula_2014_qualB_B.py  codefestival_2016_qualA_b.py  codefestival_2016_qualB_b.py  digitalarts_1.py  past201912_b.py  sumitb2019_b.py  tenka1_2012_qualA_2.py
encryption/: codeB.c  string.c
go/: odd_even.go
gomoku_game/: gomoku_vol2.c  gomoku_with_asuka.c  with_asuka.c  with_naoya.c
gulp/: .gitignore  README.md  gulpfile.js  package-lock.json  package.json
janken_game/: jyanken_vol1.c  tmp.c  with_fujita.c
life_game/: life_game.cpp
linetrace/: course1_sample.c  level1_sample.c  level1_sample1.c  level2_sample.c  (+8 more)
rust/gomoku_game/: Cargo.toml
rust/gomoku_game/src/: board.rs  coord.rs  input.rs  main.rs  stone.rs
(+284 files in other folders)
