[package]
name = "gomoku_game"
version = "0.1.0"
authors = ["tanacchi <q111026d@mail.kyutech.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1.10"
pretty_assertions = "1.3.0"
pretty_assertions_sorted = "1.2.1"
rstest = "0.17.0"
